# identark

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-enhanced.yml  ci.yml  publish.yml
examples/: README_security_crew.md  langgraph_agent.py  langgraph_agent_ollama.py  requirements-streamlit.txt  security_crew_app.py  security_incident_crew.py
examples/.streamlit/: secrets.toml.example
examples/n8n/: README.md  enterprise_support_agent.json
identark/: __init__.py  pricing.py
identark/integrations/: crewai.py
identark/testing/: mock_gateway.py
tests/unit/: test_integrations.py
